# Apollo-DL-IAPS

./: CMakeLists.txt  HA_path.csv  README.md
include/: cos_theta_smoother.h  discrete_points_reference_line_smoother.h  discretized_path.h  discretized_trajectory.h  fem_pos_deviation_smoother.h  iterative_anchoring_smoother.h  planning_context.h  reference_line_smoother.h  reference_point.h  speed_data.h
pictures/: Path_Smooth.pptx
piecewise_jerk/: piecewise_jerk_path_problem.cc  piecewise_jerk_path_problem.h  piecewise_jerk_problem.cc  piecewise_jerk_speed_problem.cc  piecewise_jerk_speed_problem.h
proto/: cos_theta_smoother_config.pb.cc  cos_theta_smoother_config.pb.h  fem_pos_deviation_smoother_config.pb.cc  fem_pos_deviation_smoother_config.pb.h  fem_pos_deviation_smoother_config.proto  geometry.pb.cc  geometry.pb.h  planner_open_space_config.pb.cc  planner_open_space_config.pb.h  planner_open_space_config.proto  planning.pb.cc  planning.pb.h  planning.proto  planning_status.pb.cc  planning_status.pb.h  planning_status.proto  pnc_point.pb.cc  pnc_point.pb.h  reference_line_smoother_config.pb.cc  reference_line_smoother_config.pb.h  reference_line_smoother_config.proto  task_config.pb.cc  task_config.pb.h  vehicle_config.pb.cc  vehicle_config.pb.h  vehicle_config.proto
src/: cos_theta_ipopt_interface.cc  cos_theta_smoother.cc  discrete_points_math.cc  discrete_points_reference_line_smoother.cc  discrete_points_reference_line_smoother_test.cpp  discretized_path.cc  discretized_trajectory.cc  fem_pos_deviation_ipopt_interface.cc  fem_pos_deviation_osqp_interface.cc  fem_pos_deviation_smoother.cc  fem_pos_deviation_sqp_osqp_interface.cc  interpolate.cpp  iterative_anchoring_smoother.cc  main.cpp  planning_context.cc  reference_point.cc  speed_data.cc
util/: aabox2d.cc  aabox2d.h  box2d.cc  box2d.h  line_segment2d.cc  (+15 more)
